[package]
name = "dvrl"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
libloading = "0.8.0"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "z"
lto = true

[profile.release.package.rocket-api]
opt-level = 3

[package.metadata.deb]
build-depends = ["gcc"]

[build]
target = "x86_64-unknown-linux-gnu"


[[bin]]
name = "rocket-api"
path = "src/main.rs"

