[package]
name = "dvrl"
version = "0.1.0"
edition = "2021"
links = "mypi"


[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
libloading = "0.8.0"
chrono = "0.4.0"
log = "0.4"
fern = "0.5"
config = "0.13.1"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = "z"
lto = true

[profile.release.package.rocket-api]
opt-level = 3

[[bin]]
name = "rocket-api"
path = "src/main.rs"

[build-script]
path = "build.rs"